<resources>
    <string name="app_name">obd_driving_api</string>
    <string name="title_pref_bluetooth">Bluetooth</string>
    <string name="pref_bluetooth_title">Habilitar bluetooth</string>
    <string name="pref_bluetooth_summaryOn">Bluetooth apagado</string>
    <string name="pref_bluetooth_summaryOff">Bluetooth encendido</string>
    <string name="pref_bluetooth_list_devices_title">Dispositivos bluetooth</string>
    <string name="pref_bluetooth_list_devices_summary">Lista de dispositivos bluetooth emparejados</string>
    <string name="pref_bluetooth_list_discovery">Lista de dispositivos bluetooth disponibles.</string>
    <string name="text_bluetooth_nodevice">Ningún dispositivo bluetooth seleccionado</string>
    <string name="notification_action">Toque para abrir OBD-driving</string>
    <string name="service_started">La conexión OBD ha comenzado.</string>
    <string name="service_starting">Iniciando conexión OBD ...</string>
    <string name="status_bluetooth_connected">conectado</string>
    <string name="status_bluetooth_error_connecting">la conexión falló, verificar OBD</string>
    <string name="mac_bluetooh_empty">No hay dispositivo emparejado</string>
    <string name="status_bluetooth_connecting">conectando</string>
    <string name="status_bluetooth_disabled">discapacitado</string>
    <string name="status_bluetooth_ok">Listo</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="remove_location_updates">Remove location updates</string>


    <string name="waiting_for_obd">Waiting for paired OBD adapter</string>
    <string name="connecting_to_ecu">Connecting to ECU</string>
    <string name="obd2_adapter_not_responding">The OBD adapter is not responding</string>
    <string name="obd_connected">OBD Connected</string>
    <string name="connect_lost">Connect Lost</string>
    <!--these string not available in Arabic-->
    <string name="fuel_type_not_supported">Fuel type sensor not available."</string>
    <string name="searching_protocol">Searching protocol."</string>
    <string name="searching_supported_sensor">Searching supported sensors."</string>
    <string name="feedback_content_cant_less_than_5">Feedback text cannot be less than 5 characters.</string>
    <string name="image_request_failed">Failed to process image.</string>
    <string name="track_not_available">Track not available.</string>
    <string name="accept_permission_for_location">You will not receive location until accept location permission.</string>
    <string name="accept_permission_in_app_settings">You will not receive location until accept location permission in Settings-Apps-TeCar-HeadUnit-Permissions.</string>
    <string name="syncing_not_completed_yet">Trip location not synced yet. Please check internet connection and wait...</string>
    <string name="unable_to_connect">Unable to connect with ECU.</string>

    <string name="bluetooth_unsupported">Device does not support bluetooth.</string>
    <string name="maf_not_supporte">Fuel related sensors not available, you will not receive Fuel consumption and Cost.</string>
    <string name="engine_time_not_supported">Run time since engine start not supported."</string>

</resources>
